fix: avoid bleeding of font-weight
A couple of components are expected
to be used inside a bold context.
By setting font-weight: normal,
 we avoid displaying it in bold.

--- a/src/elements/date-input/date-input.scss
+++ b/src/elements/date-input/date-input.scss
@@ -10,6 +10,7 @@
   max-width: 100%;
   cursor: text;
   align-items: center;
+  font-weight: normal;
 
   @include sbb.if-forced-colors {
     color: FieldText;
